--- a/InventorySystem/Views/Admin/Index.cshtml
+++ b/InventorySystem/Views/Admin/Index.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
+<div class="box box-danger">
+    <div class="box-header with-border">
+        <h3 class="box-title">Title</h3>
+    </div>
+    <div class="box-body">
+        İçerik
+    </div>
+</div>
