--- a/InventorySystem/Views/Account/Login.cshtml
+++ b/InventorySystem/Views/Account/Login.cshtml
@@ -6,7 +6,8 @@
 <head>
     <title>LOGIN</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="~/Content/Login/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Login/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -17,14 +18,15 @@
     <link rel="stylesheet" type="text/css" href="~/Content/Login/vendor/select2/select2.min.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Login/vendor/daterangepicker/daterangepicker.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Login/css/util.css">
-    <link rel="stylesheet" type="text/css" href="~/Content/Login/css/main.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/Login/css/main.css">
+
 </head>
 <body>
 
     <div class="limiter">
         <div class="container-login100" style="background-image: url('../Content/Login/images/bg-01.jpg');">
             <div class="wrap-login100">
-                <form class="login100-form validate-form">
+                <form class="login100-form validate-form" method="post">
                     <span class="login100-form-logo">
                         <i class="zmdi zmdi-landscape"></i>
                     </span>
@@ -49,18 +51,19 @@
                             Beni hatırla
                         </label>
                     </div>
-
+                    @if (ViewBag.Error != null) {
+                        <br />
+                        <label class="btn-danger pad">
+                            @ViewBag.Error
+                        </label>
+                        <br />
+                    }
                     <div class="container-login100-form-btn">
                         <button class="login100-form-btn">
                             Login
                         </button>
                     </div>
 
-                    <div class="text-center p-t-90">
-                        <a class="txt1" href="#">
-                            
-                        </a>
-                    </div>
                 </form>
             </div>
         </div>
