--- a/InventorySystem/Views/Shared/_Layout.cshtml
+++ b/InventorySystem/Views/Shared/_Layout.cshtml
@@ -28,83 +28,13 @@
                 </a>
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
-                        <li class="dropdown user user-menu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="~/admin-lte/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                                <span class="hidden-xs">İlhan Nalbant</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="user-header">
-                                    <img src="~/admin-lte/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                                    <p>
-                                        İlhan Nalbant - Web Developer
-                                        <small>Member since Nov. 2012</small>
-                                    </p>
-                                </li>
-                                <li class="user-body">
-                                    <div class="row">
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">Followers</a>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">Sales</a>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">Friends</a>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="user-footer">
-                                    <div class="pull-left">
-                                        <a href="#" class="btn btn-default btn-flat">Profil</a>
-                                    </div>
-                                    <div class="pull-right">
-                                        <a href="#" class="btn btn-default btn-flat">Çıkış Yap</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
+                        @Html.Action("UserProfil", "Admin")
                     </ul>
                 </div>
             </nav>
         </header>
-        <aside class="main-sidebar">
-            <section class="sidebar">
-                <div class="user-panel">
-                    <div class="pull-left image">
-                        <img src="~/admin-lte/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                    </div>
-                    <div class="pull-left info">
-                        <p>Ilhan Nalbant</p>
-                        <a href="#"><i class="fa fa-circle text-lime"></i> Online</a>
-                    </div>
-                </div>
-                <form action="#" method="get" class="sidebar-form">
-                    <div class="input-group">
-                        <input type="text" name="q" class="form-control" placeholder="Arama Yap...">
-                        <span class="input-group-btn">
-                            <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
-                    </div>
-                </form>
-                <ul class="sidebar-menu" data-widget="tree">
-                    <li class="header">MAIN NAVIGATION</li>
-
-                    <li><a href="#"><i class="fa fa-home text-green"></i> ANASAYFA</a></li>
-                    <li><a href="#"><i class="fa fa-file-excel-o text-yellow"></i> MALZEME BİLGİ</a></li>
-                    <li><a href="#"><i class="fa fa-floppy-o text-aqua"></i> STOK</a></li>
-                    <li><a href="#"><i class="fa fa-car text-blue"></i> DAĞITIM</a></li>
-                    <li><a href="#"><i class="fa fa-rocket text-maroon"></i> TRANSFER</a></li>
-                    <li><a href="#"><i class="fa fa-search-plus text-green"></i> SORGU</a></li>
-                    <li><a href="#"><i class="fa fa-user text-red"></i> YÖNETİM</a></li>
-                    <li><a href="#"><i class="fa fa-comments text-yellow"></i> YARDIM</a></li>
-
-                    <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Çıkış Yap</span></a></li>
-                </ul>
-            </section>
-        </aside>
+        
+        @Html.Action("Menu", "Admin")
         <div class="content-wrapper">
             <section class="content-header">
 
