--- a/InventorySystem/Views/Shared/Partials/Menu.cshtml
+++ b/InventorySystem/Views/Shared/Partials/Menu.cshtml
@@ -12,11 +12,11 @@
                 <a href="#"><i class="fa fa-circle text-lime"></i> Online</a>
             </div>
         </div>
-        <form action="#" method="get" class="sidebar-form">
+        <form action="" method="get" class="sidebar-form">
             <div class="input-group">
                 <input type="text" name="q" class="form-control" placeholder="Arama Yap...">
                 <span class="input-group-btn">
-                    <button type="submit" name="search" id="search-btn" class="btn btn-flat">
+                    <button type="submit" id="search-btn" class="btn btn-flat">
                         <i class="fa fa-search"></i>
                     </button>
                 </span>
@@ -25,8 +25,8 @@
         <ul class="sidebar-menu" data-widget="tree">
             <li class="header">MAIN NAVIGATION</li>
 
-            <li><a href="#"><i class="fa fa-home text-green"></i> ANASAYFA</a></li>
-            <li><a href="#"><i class="fa fa-file-excel-o text-yellow"></i> MALZEME BİLGİ</a></li>
+            <li><a href="~/Admin"><i class="fa fa-home text-green"></i> ANASAYFA</a></li>
+            <li><a href="~/MalzemeBilgi"><i class="fa fa-file-excel-o text-yellow"></i> MALZEME BİLGİ</a></li>
             <li><a href="#"><i class="fa fa-floppy-o text-aqua"></i> STOK</a></li>
             <li><a href="#"><i class="fa fa-car text-blue"></i> DAĞITIM</a></li>
             <li><a href="#"><i class="fa fa-rocket text-maroon"></i> TRANSFER</a></li>
