--- a/InventorySystem/Views/MalzemeBilgi/Ekle.cshtml
+++ b/InventorySystem/Views/MalzemeBilgi/Ekle.cshtml
@@ -14,7 +14,6 @@
             <br />
             <div class="form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.MalzemeBilgiID)
                 <div class="form-group">
                     @Html.LabelFor(model => model.MalzemeKodu, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
@@ -73,8 +72,8 @@
 
                 <div class="box-footer">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Güncelle" class="btn btn-success btn-flat" />
-                        @Html.ActionLink("Listeye Dön", "Index", null, new { @class = "btn btn-warning btn-flat" })
+                        <input type="submit" value="Kayıt Ekle" class="btn btn-success btn-flat" />
+                        @Html.ActionLink("Listeye Dön", "Index", null, new { @class = "btn btn-warning btn-flat"})
                     </div>
                 </div>
             </div>
