--- a/InventorySystem/Views/MalzemeBilgi/Guncelle.cshtml
+++ b/InventorySystem/Views/MalzemeBilgi/Guncelle.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Ekle";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="box box-success">
+<div class="box box-info">
     <div class="box-header with-border">
-        <h3 class="box-title">Yeni Malzeme Bilgi Kaydı Ekle</h3>
+        <h3 class="box-title">Malzeme Bilgilerini Güncelle</h3>
     </div>
     <div class="box-body">
         @using (Html.BeginForm()) {
