--- a/InventorySystem/Views/Shared/Partials/Menu.cshtml
+++ b/InventorySystem/Views/Shared/Partials/Menu.cshtml
@@ -31,7 +31,7 @@
             <li><a href="#"><i class="fa fa-car text-blue"></i> DAĞITIM</a></li>
             <li><a href="#"><i class="fa fa-rocket text-maroon"></i> TRANSFER</a></li>
             <li><a href="#"><i class="fa fa-search-plus text-green"></i> SORGU</a></li>
-            <li><a href="#"><i class="fa fa-user text-red"></i> YÖNETİM</a></li>
+            <li><a href="~/Yonetim"><i class="fa fa-user text-red"></i> YÖNETİM</a></li>
             <li><a href="#"><i class="fa fa-comments text-yellow"></i> YARDIM</a></li>
 
             <li><a href="~/Account/Logout"><i class="fa fa-circle-o text-red"></i> <span>Çıkış Yap</span></a></li>
