--- a/InventorySystem/Views/Yonetim/Partials/KurumList.cshtml
+++ b/InventorySystem/Views/Yonetim/Partials/KurumList.cshtml
@@ -1,8 +1,17 @@
-﻿@model IEnumerable<InventorySystem.Models.Kurum>
+﻿@using PagedList
+@using PagedList.Mvc
 
+@model IEnumerable<InventorySystem.Models.Kurum>
+
+@{
+    int? kullanici = ViewBag.kullanici;
+    int? birim = ViewBag.birim;
+}
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
+            <th>Kurum Adı</th>
+            <th>Birim Sayısı</th>
             <th></th>
         </tr>
     </thead>
@@ -10,8 +19,19 @@
     <tbody>
         @foreach (var item in Model) {
             <tr>
-                <td></td>
+                <td>@item.Adi</td>
+                <td>@item.Birimler.Count()</td>
+                <td>
+                    <div class="pull-right">
+                        @Html.ActionLink("Düzenle", "KurumDuzenle", new { id = item.KurumID }, new { @class = "btn btn-flat btn-warning" })
+                        @Html.ActionLink("Sil", "KurumSil", new { id = item.KurumID }, new { @class = "btn btn-flat btn-danger" })
+                    </div>
+                </td>
             </tr>
         }
     </tbody>
 </table>
+
+<div class="pull-right">
+    @Html.PagedListPager((IPagedList)Model, kurum => Url.Action("Index", new { birim, kullanici, kurum }), PagedListRenderOptions.ClassicPlusFirstAndLast)
+</div>
