--- a/InventorySystem/Views/Stok/Index.cshtml
+++ b/InventorySystem/Views/Stok/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@using PagedList
 @using PagedList.Mvc
-@model IEnumerable<InventorySystem.Models.MalzemeBilgi>
 
+@model IEnumerable<InventorySystem.Models.Stok>
 
 @{
-    ViewBag.Title = "Malzeme Bilgi";
+    ViewBag.Title = "Stok";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     int counter = 0;
@@ -15,10 +15,11 @@
     var q = Request.Params.Get("q");
 }
 
+
 <div class="box box-success">
     <div class="box-header with-border">
-        <h3 class="box-title">Malzeme Bilgi Tablosu</h3>
-        @if (User.IsInRole("MB")) {
+        <h3 class="box-title">Stok</h3>
+        @if (User.IsInRole("ST")) {
             <div class="pull-right">
                 @Html.ActionLink("Yeni Kayıt Ekle", "Ekle", null, new { @class = "btn btn-success btn-flat" })
             </div>
@@ -35,31 +36,35 @@
             <thead>
                 <tr>
                     <th>#.</th>
+                    <th>Seri Numarası</th>
                     <th>Malzeme Adı</th>
-                    <th>Malzeme Kodu</th>
-                    <th>Ambar Yazılım Kodu</th>
-                    <th>Tanımı</th>
-                    <th>Orijinal Stok Kodu</th>
-                    <th>Teknik Bilgi</th>
+                    <th>Kurum</th>
+                    <th>Adet</th>
+                    <th>Malzeme Birim Bedeli</th>
+                    <th>Garanti Baş. Bit. Tarihleri</th>
                     <th>Açıklama</th>
+
                 </tr>
             </thead>
 
             <tbody>
                 @foreach (var item in Model) {
                     counter++;
-                    <tr>
-                        <td>@counter</td>
-                        <td>
-                            @Html.ActionLink(item.MalzemeAdi, "Detay", new { id = item.MalzemeBilgiID })
-                        </td>
-                        <td>@item.MalzemeKodu</td>
-                        <td>@item.AmbarYazilimKodu</td>
-                        <td>@item.MalzemeTanimi</td>
-                        <td>@item.OrijinalStokKodu</td>
-                        <td>@item.TeknikBilgi</td>
-                        <td>@item.Aciklama</td>
-                    </tr>
+                <tr>
+                    <td>@counter</td>
+                    <td>
+                        @Html.ActionLink(item.SeriNumarasi, "Detay", new { id = item.StokID })
+                    </td>
+                    <td>
+                        @item.MalzemeBilgi.MalzemeAdi
+                    </td>
+                    <td>@item.Kurum.Adi</td>
+                    <td>@item.Adet</td>
+                    <td>@item.MalzemeBirimBedeli</td>
+                    <td>@item.GarantiTarihBaslangic.ToString("dd.MM.yyyy") <br /> @item.GarantiTarihBitis.ToString("dd.MM.yyyy")</td>
+                    <td>@item.Aciklama</td>
+
+                </tr>
                 }
             </tbody>
         </table>
