--- a/InventorySystem/Views/Stok/Guncelle.cshtml
+++ b/InventorySystem/Views/Stok/Guncelle.cshtml
@@ -22,13 +22,12 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.MalzemeBilgiID, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        <select class="form-control" disabled>
-                            <option>
-                                @ViewBag.MalzemeBilgi
-                            </option>
+                        <select class="form-control" disabled="disabled">
+                            <option selected="selected">@ViewBag.MalzemeBilgi</option>
                         </select>
                     </div>
                 </div>
+                <input type="hidden" name="MalzemeBilgiID" value="@Model.MalzemeBilgiID" />
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.SeriNumarasi, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -41,7 +40,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.GarantiTarihBaslangic, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.GarantiTarihBaslangic, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+                        @Html.TextBoxFor(model => model.GarantiTarihBaslangic, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
                         @Html.ValidationMessageFor(model => model.GarantiTarihBaslangic, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -49,7 +48,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.GarantiTarihBitis, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.GarantiTarihBitis, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+                        @Html.TextBoxFor(model => model.GarantiTarihBitis, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
                         @Html.ValidationMessageFor(model => model.GarantiTarihBitis, "", new { @class = "text-danger" })
                     </div>
                 </div>
