dağıtım ve transfer listeleme, test solution

--- a/InventorySystem/Views/Shared/Partials/Menu.cshtml
+++ b/InventorySystem/Views/Shared/Partials/Menu.cshtml
@@ -28,8 +28,8 @@
             <li><a href="~/Admin"><i class="fa fa-home text-green"></i> ANASAYFA</a></li>
             <li><a href="~/MalzemeBilgi"><i class="fa fa-file-excel-o text-yellow"></i> MALZEME BİLGİ</a></li>
             <li><a href="~/Stok"><i class="fa fa-floppy-o text-aqua"></i> STOK</a></li>
-            <li><a href="#"><i class="fa fa-car text-blue"></i> DAĞITIM</a></li>
-            <li><a href="#"><i class="fa fa-rocket text-maroon"></i> TRANSFER</a></li>
+            <li><a href="~/Dagitim"><i class="fa fa-car text-blue"></i> DAĞITIM</a></li>
+            <li><a href="~/Transfer"><i class="fa fa-rocket text-maroon"></i> TRANSFER</a></li>
             <li><a href="#"><i class="fa fa-search-plus text-green"></i> SORGU</a></li>
             <li><a href="~/Yonetim"><i class="fa fa-user text-red"></i> YÖNETİM</a></li>
             <li><a href="#"><i class="fa fa-comments text-yellow"></i> YARDIM</a></li>
